Bigger icon and wmlindent

--- a/_main.cfg
+++ b/_main.cfg
@@ -4,6 +4,11 @@
     path="data/add-ons/Non_Fatal_Wounds_Extended/translations"
 [/textdomain]
 
+## IMAGES, ASSETS :
+[binary_path]
+    path="data/add-ons/Non_Fatal_Wounds_Extended"
+[/binary_path]
+
 [modification]
     id=nfw_extended
     name=_"Non-Fatal Wounds Extended"
