--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -39,7 +39,7 @@
                 speaker=narrator
                 # po: generic message which could apply to any scenario where the storyline already explains why even the surviving units don't reappear later in the campaign
                 message= _ "<b><i>Non-Fatal Wounds</i></b> modification is disabled for this scenario."
-                image="units/human-loyalists/duelist-die5.png"
+                image="misc/nfw-icon.png"
             [/message]
             [fire_event]
                 name=nfw_disable_for_this_scenario
@@ -52,7 +52,7 @@
             [message]
                 speaker=narrator
                 message= _ "<b><i>Non-Fatal Wounds</i></b> modification is disabled for this scenario."
-                image="units/human-loyalists/duelist-die5.png"
+                image="misc/nfw-icon.png"
             [/message]
             [fire_event]
                 name=nfw_disable_for_this_scenario
@@ -74,7 +74,7 @@
             [message]
                 speaker=narrator
                 message= _ "<b><i>Non-Fatal Wounds</i></b> modification might work unusually with this campaign. The recall lists change during the campaign, and units that are non-fatally wounded may reappear on the wrong recall list."
-                image="units/human-loyalists/duelist-die5.png"
+                image="misc/nfw-icon.png"
                 # I'm not worrying about campaigns like SotA, which have divergent paths but each path has similar recruit lists and the paths recombine later
             [/message]
         [/case]
@@ -86,7 +86,7 @@
                 speaker=narrator
                 # po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
                 message= _ "<b><i>Non-Fatal Wounds</i></b> modification does not affect the objectives for this scenario. The unit can survives, but still triggers the same events as if it died."
-                image="units/human-loyalists/duelist-die5.png"
+                image="misc/nfw-icon.png"
             [/message]
         [/case]
         [case]
@@ -94,7 +94,7 @@
             [message]
                 speaker=narrator
                 message=_ "<b><i>Non-Fatal Wounds:</i></b> As long as the Lich-Lord Lenvan is alive, all your dead units will rise as undead regardless of cause of death. Choose if you want to lose them all forever or you prefer to let chance decide. You can still irretrievably lose your units forever if you are attacked by a unit with plague."
-                image="units/human-loyalists/duelist-die5.png"
+                image="misc/nfw-icon.png"
                 [option]
                     label=_ "Disable Non-Fatal Wounds until Lord Lenvan dies"
                     default=yes
@@ -119,7 +119,7 @@
             [message]
                 speaker=narrator
                 message=_ "<b><i>Non-Fatal Wounds:</i></b> As long as the Lich-Lord Jevyan is alive, all your dead units will rise as undead regardless of cause of death."
-                image="units/human-loyalists/duelist-die5.png"
+                image="misc/nfw-icon.png"
             [/message]
             [fire_event]
                 name=nfw_lord_lenvan
@@ -133,35 +133,35 @@
 #ifdef CAMPAIGN_EASTERN_INVASION
         [case]
             value=12_Evacuation
-			[message]
-				speaker=narrator
-				message= _ "<b><i>Non-Fatal Wounds:</i></b> Choose if you want units stranded on the other side of the bridge to always receive death wound or not. Units still on the recall list will die if the bridge is blown up. The rest will receive a wound according to the settings."
-				image="units/human-loyalists/duelist-die5.png"
-				[option]
-					label=_ "Kill all units stranded on the other side of the bridge"
-					default=yes
-					[command]
-						[set_variable]
-							name=nfw_kill_stranded
-							value=yes
-						[/set_variable]
-					[/command]
-				[/option]
-				[option]
-					label=_ "Continues normal Non-Fatal Wounds behavior"
-					# no action, just leave the NFW enabled
-				[/option]
-			[/message]
+            [message]
+                speaker=narrator
+                message= _ "<b><i>Non-Fatal Wounds:</i></b> Choose if you want units stranded on the other side of the bridge to always receive death wound or not. Units still on the recall list will die if the bridge is blown up. The rest will receive a wound according to the settings."
+                image="misc/nfw-icon.png"
+                [option]
+                    label=_ "Kill all units stranded on the other side of the bridge"
+                    default=yes
+                    [command]
+                        [set_variable]
+                            name=nfw_kill_stranded
+                            value=yes
+                        [/set_variable]
+                    [/command]
+                [/option]
+                [option]
+                    label=_ "Continues normal Non-Fatal Wounds behavior"
+                    # no action, just leave the NFW enabled
+                [/option]
+            [/message]
         [/case]
 #endif
 #ifdef CAMPAIGN_SON_OF_THE_BLACK_EYE
         [case]
             value=10_Saving_Inarix
-			[message]
-				speaker=narrator
-				message= _ "<b><i>Non-Fatal Wounds:</i></b> All units stranded on the other side of the bridge, and the unit that sacrifices itself to blow the bridge up, will receive a death wound."
-				image="units/human-loyalists/duelist-die5.png"
-			[/message]
+            [message]
+                speaker=narrator
+                message= _ "<b><i>Non-Fatal Wounds:</i></b> All units stranded on the other side of the bridge, and the unit that sacrifices itself to blow the bridge up, will receive a death wound."
+                image="misc/nfw-icon.png"
+            [/message]
         [/case]
 #endif
     [/switch]
@@ -189,13 +189,13 @@
         [message]
             speaker=narrator
             message=_ "<b><i>Non-Fatal Wounds</i></b> works normally again."
-            image="units/human-loyalists/duelist-die5.png"
+            image="misc/nfw-icon.png"
         [/message]
         [event]
             name=last_breath
             first_time_only=no
             id=nfw_catch_last_breath_lenvan
-			{NFW_CATCH_LAST_BREATH}
+            {NFW_CATCH_LAST_BREATH}
         [/event]
     [/event]
 [/event]
@@ -204,9 +204,9 @@
     name=last_breath
     id=nfw_lady_filter
     first_time_only=no
-	[filter]
-		id=Wesfolk Leader,Lady Outlaw
-	[/filter]
+    [filter]
+        id=Wesfolk Leader,Lady Outlaw
+    [/filter]
 
     [switch]
         variable=nfw_current_scenario_id
@@ -242,14 +242,14 @@
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 08_Silent_Forest}
-		{VARIABLE_CONDITIONAL nfw_first_death not_equals yes}
+        {VARIABLE_CONDITIONAL nfw_first_death not_equals yes}
     [/filter_condition]
-	[filter]
-		side=2,3
-	[/filter]
-	{VARIABLE nfw_first_death yes}
-	{VARIABLE nfw_already_dead yes}
-	{NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Execution" {NFW_COLOR_RED}}
+    [filter]
+        side=2,3
+    [/filter]
+    {VARIABLE nfw_first_death yes}
+    {VARIABLE nfw_already_dead yes}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Execution" {NFW_COLOR_RED}}
 [/event]
 
 [event]
@@ -259,47 +259,45 @@
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 14_Back_Home}
     [/filter_condition]
-	[filter]
-		id=Thelarion
-	[/filter]
-	{VARIABLE nfw_first_death yes}
-	{VARIABLE nfw_already_dead yes}
-	{NFW_frostbite_WOUND}
+    [filter]
+        id=Thelarion
+    [/filter]
+    {VARIABLE nfw_first_death yes}
+    {VARIABLE nfw_already_dead yes}
+    {NFW_frostbite_WOUND}
 [/event]
 
 [event]
-	name=last_breath
-	id=nfw_bridge_sacrifice
-	first_time_only=no
+    name=last_breath
+    id=nfw_bridge_sacrifice
+    first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 10_Saving_Inarix}
         {VARIABLE_CONDITIONAL unit_detonating_says not_equals $nfw_empty_variable}
     [/filter_condition]
-	[filter]
-		side=1
-		x,y=21,13
-	[/filter]
-	{VARIABLE nfw_bridge_destroyed yes}
+    [filter]
+        side=1
+        x,y=21,13
+    [/filter]
+    {VARIABLE nfw_bridge_destroyed yes}
 [/event]
 
 [event]
-	name=last_breath
-	id=nfw_bridge_abandoned
-	first_time_only=no
+    name=last_breath
+    id=nfw_bridge_abandoned
+    first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 10_Saving_Inarix}
         {VARIABLE_CONDITIONAL nfw_bridge_destroyed equals yes}
     [/filter_condition]
-	[filter]
-		side=1
-	[/filter]
-	{NFW_dead_WOUND}
-	{VARIABLE nfw_already_dead yes}
-	{VARIABLE nfw_no_dialog yes}
+    [filter]
+        side=1
+    [/filter]
+    {NFW_dead_WOUND}
+    {VARIABLE nfw_already_dead yes}
+    {VARIABLE nfw_no_dialog yes}
 [/event]
 #endif
-
-
 
 # LoW's scenario Costly Revenge is meant to kill off many of the player's own elves, before those elves become the other side of the elvish civil war. In single-player mode, give the player an option to disable the NFW mod near the end of that scenario, late enough that they'll be able to reload the autosave once they find out what the next battle is.
 
@@ -325,7 +323,7 @@
                 [message]
                     speaker=narrator
                     message=_ "<b><i>Non-Fatal Wounds:</i></b> in all of mainline Wesnoth, this scenario is probably the most evil act by the player’s own side. The scenario is called Costly Revenge, and for the story it’s meant to be costly to the elves as well as these innocent saurians."
-                    image="units/human-loyalists/duelist-die5.png"
+                    image="misc/nfw-icon.png"
                     [option]
                         label=_ "Disable Non-Fatal Wounds and let the story proceed as expected"
                         default=yes
@@ -471,21 +469,21 @@
 
 #ifdef CAMPAIGN_EASTERN_INVASION
 [event]
-	name=last_breath
-	id=nfw_bridge_destroyed
-	first_time_only=no
-	[filter_condition]
-		{VARIABLE_CONDITIONAL nfw_current_scenario_id equals 12_Evacuation}
-		{VARIABLE_CONDITIONAL nfw_kill_stranded equals yes}
-		[have_location]
-			x=8
-			y=18
-			terrain=Wo
-		[/have_location]
-	[/filter_condition]
-	{NFW_dead_WOUND}
-	{VARIABLE nfw_already_dead yes}
-	{VARIABLE nfw_no_dialog yes}
+    name=last_breath
+    id=nfw_bridge_destroyed
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 12_Evacuation}
+        {VARIABLE_CONDITIONAL nfw_kill_stranded equals yes}
+        [have_location]
+            x=8
+            y=18
+            terrain=Wo
+        [/have_location]
+    [/filter_condition]
+    {NFW_dead_WOUND}
+    {VARIABLE nfw_already_dead yes}
+    {VARIABLE nfw_no_dialog yes}
 [/event]
 #endif
 
@@ -509,7 +507,7 @@
     [message]
         speaker=narrator
         message= _"<b><i>Non-Fatal Wounds: </i></b>"+_"Because this is the last scenario, all units can die, without exception, and will count as such for the ending scene."
-        image="units/human-loyalists/duelist-die5.png"
+        image="misc/nfw-icon.png"
     [/message]
     [fire_event]
         name=nfw_disable_for_this_scenario
