--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -5,20 +5,20 @@
 #To show different variables on help menu
 
 #define NFW_MENU_EXIT
-	[option]
-		label="<b>»</b> "+_"Back to help menu"
-		default=yes
-		[command]
-			[fire_event]
-				name=nfw_help_menu
-			[/fire_event]
-		[/command]
-	[/option]
-	[option]
-		label="<b>"+_"Exit"+"</b>"
-		[command]
-		[/command]
-	[/option]
+    [option]
+        label="<b>»</b> "+_"Back to help menu"
+        default=yes
+        [command]
+            [fire_event]
+                name=nfw_help_menu
+            [/fire_event]
+        [/command]
+    [/option]
+    [option]
+        label="<b>"+_"Exit"+"</b>"
+        [command]
+        [/command]
+    [/option]
 #enddef
 
 #define NFW_WOUNDS STATUS
@@ -29,7 +29,7 @@
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
  "+_"(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"
         side_for=$side_number
-        image="units/human-loyalists/duelist-die5.png"
+        image="misc/nfw-icon.png"
         [option]
             label="<b>»</b> "+_"List of Wounds"
             default=yes
@@ -64,8 +64,8 @@
 * <i>Damage</i> (-5% mp, hp, damage and accuracy) > Mechanical, random
 * <i>Lost</i> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
                     side_for=$side_number
-                    image="units/human-loyalists/duelist-die5.png"
-					{NFW_MENU_EXIT}
+                    image="misc/nfw-icon.png"
+                    {NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
@@ -87,8 +87,8 @@
 * The rest of wounds can be healed choosing a recover AMLA instead of the advancement or default AMLA (still can advance later to the next advancement).
 * Optional wounds can't be healed at all."
                     side_for=$side_number
-                    image="units/human-loyalists/duelist-die5.png"
-					{NFW_MENU_EXIT}
+                    image="misc/nfw-icon.png"
+                    {NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
@@ -98,7 +98,7 @@
                 [message]
                     speaker=narrator
                     message=_"Set status of Wounds."
-                    image="units/human-loyalists/duelist-die5.png"
+                    image="misc/nfw-icon.png"
                     [option]
                         label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
                         [command]
@@ -126,11 +126,11 @@
                             [/set_variable]
                         [/command]
                     [/option]
-					{NFW_MENU_EXIT}
+                    {NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
-		{NFW_MENU_EXIT}
+        {NFW_MENU_EXIT}
     [/message]
 #enddef
 
@@ -147,14 +147,14 @@
 * <i>Turning into a ghost</i>: -50% HP; -20% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold or fire > Units that are not already spirits or ghosts
 * <i>Turning into a zombie</i>: -30% HP, -25% general attack damage, -25% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
         side_for=$side_number
-        image="units/human-loyalists/duelist-die5.png"
+        image="misc/nfw-icon.png"
         [option]
             label="<b>»</b> "+_"Change status of Death"
             [command]
                 [message]
                     speaker=narrator
                     message=_"Set status of Death."
-                    image="units/human-loyalists/duelist-die5.png"
+                    image="misc/nfw-icon.png"
                     [option]
                         label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
                         [command]
@@ -182,11 +182,11 @@
                             [/set_variable]
                         [/command]
                     [/option]
-					{NFW_MENU_EXIT}
+                    {NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
-		{NFW_MENU_EXIT}
+        {NFW_MENU_EXIT}
     [/message]
 #enddef
 
@@ -197,7 +197,7 @@
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"
         side_for=$side_number
-        image="units/human-loyalists/duelist-die5.png"
+        image="misc/nfw-icon.png"
         [option]
             label="<b>»</b> "+_"List of elemental transformations"
             [command]
@@ -205,15 +205,15 @@
                     speaker=narrator
                     message=_"* <b><i>Wound</i> +Buffs -Debuffs > Possible units and conditions = Healing method</b>
 
-* <b><i>Fire elemental</i></b> +30% fire resistance +All attacks changed to fire -20% damage -30% HP > Units with fire attacks, or wounded with fire, or on a terrain with lava or fire = 4 HP when either the attacker or defender are in a terrain with fire or lava, once per attack
-* <b><i>Water elemental</i></b> +30% cold resistance +All attacks changed to cold and have slow ability -40% damage -40% HP > Units with cold attacks, or nagas and mermans, or wounded with cold, or on a terrain with water or cold = 2 HP when either the attacker or defender are in a terrain with water, once per attack
-* <b><i>Poison elemental</i></b> +30% pierce resistance +All attacks changed to pierce with poison -30% damage -40% HP > Units with pierce or poison attacks, or wounded with pierce or poison = 8 HP when attacked with poison, only on defense, once per attack
-* <b><i>Arcane elemental</i></b> +30% arcane resistance +All attacks changed to arcane -25% damage -25% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
-* <b><i>Earth elemental</i></b> +30% impact resistance +All attacks changed to impact -20% damage -25% HP -10% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
-* <b><i>Air elemental</i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +10% MP -30% damage -50% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
+* <b><i><span color='#FF6400'>Fire elemental</span></i></b> +30% fire resistance +All attacks changed to fire -20% damage -30% HP > Units with fire attacks, or wounded with fire, or on a terrain with lava or fire = 4 HP when either the attacker or defender are in a terrain with fire or lava, once per attack
+* <b><i><span color='#0064FF'>Water elemental</span></i></b> +30% cold resistance +All attacks changed to cold and have slow ability -40% damage -40% HP > Units with cold attacks, or nagas and mermans, or wounded with cold, or on a terrain with water or cold = 2 HP when either the attacker or defender are in a terrain with water, once per attack
+* <b><i><span color='#00AF00'>Poison elemental</span></i></b> +30% pierce resistance +All attacks changed to pierce with poison -30% damage -40% HP > Units with pierce or poison attacks, or wounded with pierce or poison = 8 HP when attacked with poison, only on defense, once per attack
+* <b><i><span color='#963296'>Arcane elemental</span></i></b> +30% arcane resistance +All attacks changed to arcane -25% damage -25% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
+* <b><i><span color='#7D3C00'>Earth elemental</span></i></b> +30% impact resistance +All attacks changed to impact -20% damage -25% HP -10% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
+* <b><i><span color='#00FFFF'>Air elemental</span></i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +10% MP -30% damage -50% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
 * <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice"
-                    image="units/human-loyalists/duelist-die5.png"
-					{NFW_MENU_EXIT}
+                    image="misc/nfw-icon.png"
+                    {NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
@@ -223,7 +223,7 @@
                 [message]
                     speaker=narrator
                     message=_"Set status of Elementals."
-                    image="units/human-loyalists/duelist-die5.png"
+                    image="misc/nfw-icon.png"
                     [option]
                         label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
                         [command]
@@ -242,11 +242,11 @@
                             [/set_variable]
                         [/command]
                     [/option]
-					{NFW_MENU_EXIT}
+                    {NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
-		{NFW_MENU_EXIT}
+        {NFW_MENU_EXIT}
     [/message]
 #enddef
 
@@ -261,14 +261,14 @@
 * <i>Paper cut</i> (-20% to all damage and -30% blade resistance) > All units
 * <i>Stepping on a Lego</i> (-20% mp and -15% accuracy) > All units"
         side_for=$side_number
-        image="units/human-loyalists/duelist-die5.png"
+        image="misc/nfw-icon.png"
         [option]
             label="<b>»</b> "+_"Change status of Funny wounds"
             [command]
                 [message]
                     speaker=narrator
                     message=_"Set status of Funny wounds."
-                    image="units/human-loyalists/duelist-die5.png"
+                    image="misc/nfw-icon.png"
                     [option]
                         label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
                         [command]
@@ -287,14 +287,13 @@
                             [/set_variable]
                         [/command]
                     [/option]
-					{NFW_MENU_EXIT}
+                    {NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
-		{NFW_MENU_EXIT}
+        {NFW_MENU_EXIT}
     [/message]
 #enddef
-
 
 [event]
     name=start
@@ -320,7 +319,7 @@
         speaker=narrator
         message="<b><i>"+_"Choose the feature you want help with"+"</i></b>"
         side_for=$side_number
-        image="units/human-loyalists/duelist-die5.png"
+        image="misc/nfw-icon.png"
         [option]
             label="<b>»</b> "+_"Wounds"
             [command]
@@ -352,21 +351,21 @@
                     speaker=narrator
                     message="<b>"+_"Are you sure? This cannot be undone. Non-Fatal Wounds will be activated again the next scenario."+"</b>"
                     side_for=$side_number
-                    image="units/human-loyalists/duelist-die5.png"
+                    image="misc/nfw-icon.png"
                     [option]
                         label="<b>»</b> "+_"Yes"
                         [command]
                             [message]
                                 speaker=narrator
                                 message= _ "The non-fatal wound modification is disabled for this scenario."
-                                image="units/human-loyalists/duelist-die5.png"
+                                image="misc/nfw-icon.png"
                             [/message]
                             [fire_event]
                                 name=nfw_disable_for_this_scenario
                             [/fire_event]
                         [/command]
                     [/option]
-					{NFW_MENU_EXIT}
+                    {NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
