--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -35,10 +35,10 @@
 [event]
     name=prestart
     {CLEAR_VARIABLE nfw_wounded}
-	{CLEAR_VARIABLE nfw_first_death}
-	{CLEAR_VARIABLE nfw_no_dialog}
-	{CLEAR_VARIABLE nfw_bridge_destroyed}
-	{CLEAR_VARIABLE nfw_kill_stranded}	
+    {CLEAR_VARIABLE nfw_first_death}
+    {CLEAR_VARIABLE nfw_no_dialog}
+    {CLEAR_VARIABLE nfw_bridge_destroyed}
+    {CLEAR_VARIABLE nfw_kill_stranded}
 [/event]
 
 [event]
@@ -47,9 +47,9 @@
     id=nfw_catch_last_breath
     # This filter can contain a list of campaign-specific units that shouldn't be revived, at least not by this add-on. It's no problem if the nfw_exclude_unit_id variable isn't set, the mod still works.
     # This only matters if their death doesn't trigger an automatic defeat, and if the side that they're on will end up on the player's recall list.
-	# This isn't limited to a particular side, because some campaigns have multiple persistent sides.
+    # This isn't limited to a particular side, because some campaigns have multiple persistent sides.
     # It isn't limited to player-controlled sides either, for example Olurf in LoW's 02_Hostile_Mountains.
-	{NFW_CATCH_LAST_BREATH}
+    {NFW_CATCH_LAST_BREATH}
 [/event]
 
 # Text to inform the player that the unit was stored and how
@@ -58,7 +58,7 @@
     first_time_only=no
     [filter_condition]
         {NFW_wounds_ENABLED}
-		{VARIABLE_CONDITIONAL nfw_no_dialog not_equals yes}
+        {VARIABLE_CONDITIONAL nfw_no_dialog not_equals yes}
     [/filter_condition]
     [filter]
         {EVENT_UNIT}
@@ -195,7 +195,7 @@
                 message= _"<b><i>Non-Fatal Wounds: </i></b>"+_"With this modification enabled, units are merely wounded instead of killed. If you choose the possibility of dead or undead, some units still can definitely die. If you win this scenario the wounded units will be added to your recall list.
 
 This does not apply to any unit that the objectives require you to keep alive. Even if they say they’re only wounded, the enemy will give your heroes no chance."
-                image="units/human-loyalists/duelist-die5.png"
+                image="misc/nfw-icon.png"
             [/message]
             {VARIABLE nfw_first_death yes}
         [/then]
