Better readability of help menu

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -39,30 +39,30 @@
                     font_size=smaller
                     message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions</b>
 
-* <i>Amnesia</i> (loses 2 xp/turn) > All units, random
-* <i>Short-term memory loss</i> (resets experience) > Units with more than 1/2 of the max experience, random
-* <i>Broken arm</i> (-20% non-magical damage) > Races with arms, random
-* <i>Broken wing</i> (-20% mp) > Races with wings, random
-* <i>Broken leg</i> (-20% mp) > Races with legs, random
-* <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, random but more probable with impact attack
-* <i>Burn</i> (-30% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire
-* <i>Capture</i> (increased recall cost based on level) > All units, random but more probable on leaders and heroes
-* <i>Concussion</i> (-20% magical damage) > Units with magical attacks, random
-* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magical attacks, random
-* <i>Cowardice</i> (-15% accuracy) > Not mechanical, random
-* <i>Fear of weapon</i> (reduced 1 strikes and -20% accuracy against what wounded them) > Not mechanical, wounded with any weapon
-* <i>Fear of the dark/light</i> (reduced 1 strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground
-* <i>Fear of terrain</i> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains
-* <i>Fear of fog</i> (-40% mp when fog is active) > Not mechanical, wounded with fog active
-* <i>Frostbite</i> (-30% cold resistance) > All units, wounded with ice attack or on a cold terrain
-* <i>Gash</i> (-30% blade resistance) > All units, wounded with blade attack
-* <i>Infection</i> (10% chance to be poisoned every turn) > Not unpoisonable, random but more probable if poisoned
-* <i>Sickness</i> (20% chance of being slowed every turn) > All units, random but more probable if slowed
-* <i>Insanity</i> (berserk on melee attacks) > Units without berserk ability
-* <i>Mutilation</i> (-20% hp) > All units, random
-* <i>Necrosis</i> (-30% arcane resistance) > Not mechanical, random
-* <i>Damage</i> (-5% mp, hp, damage and accuracy) > Mechanical, random
-* <i>Lost</i> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
+* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units, random
+* <b><i>Short-term memory loss</i></b> (resets experience) > Units with more than 1/2 of the max experience, random
+* <b><i>Broken arm</i></b> (-20% non-magical damage) > Races with arms, random
+* <b><i>Broken wing</i></b> (-20% mp) > Races with wings, random
+* <b><i>Broken leg</i></b> (-20% mp) > Races with legs, random
+* <b><i>Broken rib</i></b> (-30% impact resistance) > Not mechanical or spirits, random but more probable with impact attack
+* <b><i>Burn</i></b> (-30% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire
+* <b><i>Capture</i></b> (increased recall cost based on level) > All units, random but more probable on leaders and heroes
+* <b><i>Concussion</i></b> (-20% magical damage) > Units with magical attacks, random
+* <b><i>Wild magic</i></b> (magical attacks now are 50% chance) > Units with magical attacks, random
+* <b><i>Cowardice</i></b> (-15% accuracy) > Not mechanical, random
+* <b><i>Fear of weapon</i></b> (reduced 1 strikes and -20% accuracy against what wounded them) > Not mechanical, wounded with any weapon
+* <b><i>Fear of the dark/light</i></b> (reduced 1 strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground
+* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains
+* <b><i>Fear of fog</i></b> (-40% mp when fog is active) > Not mechanical, wounded with fog active
+* <b><i>Frostbite</i></b> (-30% cold resistance) > All units, wounded with ice attack or on a cold terrain
+* <b><i>Gash</i></b> (-30% blade resistance) > All units, wounded with blade attack
+* <b><i>Infection</i></b> (10% chance to be poisoned every turn) > Not unpoisonable, random but more probable if poisoned
+* <b><i>Sickness</i></b> (20% chance of being slowed every turn) > All units, random but more probable if slowed
+* <b><i>Insanity</i></b> (berserk on melee attacks) > Units without berserk ability
+* <b><i>Mutilation</i></b> (-20% hp) > All units, random
+* <b><i>Necrosis</i></b> (-30% arcane resistance) > Not mechanical, random
+* <b><i>Damage</i></b> (-5% mp, hp, damage and accuracy) > Mechanical, random
+* <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
                     side_for=$side_number
                     image="misc/nfw-icon.png"
                     {NFW_MENU_EXIT}
@@ -77,13 +77,13 @@
                     speaker=narrator
                     message=_"<b>Wounds healing:</b>
 
-* <i>Fear of terrain</i>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.
-* <i>Fear of weapon</i>: 20% chance of recovery when defeating an opponent wielding the weapon the unit is scared of.
-* <i>Fear of light/dark</i>: 5% chance of recovery when defeating an opponent during the day/night.
-* <i>Fear of fog</i>: 10% chance of recovery when defeating an opponent when fog is active.
-* <i>Cowardice</i>: 20% chance of recovery when defeat an enemy 1 level higher or at his highest level.
-* <i>Short-term memory loss</i>: is an 1-use wound and is healed inmediately.
-* <i>Capture</i>: is an 1-use wound and is healed when the unit is recalled the first time.
+* <b><i>Fear of terrain</i></b>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.
+* <b><i>Fear of weapon</i></b>: 20% chance of recovery when defeating an opponent wielding the weapon the unit is scared of.
+* <b><i>Fear of light/dark</i></b>: 5% chance of recovery when defeating an opponent during the day/night.
+* <b><i>Fear of fog</i></b>: 10% chance of recovery when defeating an opponent when fog is active.
+* <b><i>Cowardice</i></b>: 20% chance of recovery when defeat an enemy 1 level higher or at his highest level.
+* <b><i>Short-term memory loss</i></b>: is an 1-use wound and is healed inmediately.
+* <b><i>Capture</i></b>: is an 1-use wound and is healed when the unit is recalled the first time.
 * The rest of wounds can be healed choosing a recover AMLA instead of the advancement or default AMLA (still can advance later to the next advancement).
 * Optional wounds can't be healed at all."
                     side_for=$side_number
@@ -143,9 +143,9 @@
  "+_"(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"+"
 
 "+_"<b>Wounds list:</b>
-* <i>Death</i> (definitive death)
-* <i>Turning into a ghost</i>: -50% HP; -20% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold or fire > Units that are not already spirits or ghosts
-* <i>Turning into a zombie</i>: -30% HP, -25% general attack damage, -25% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
+* <b><i>Death</i></b> (definitive death)
+* <b><i>Turning into a ghost</i></b>: -50% HP; -20% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold or fire > Units that are not already spirits or ghosts
+* <b><i>Turning into a zombie</i></b>: -30% HP, -25% general attack damage, -25% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
         side_for=$side_number
         image="misc/nfw-icon.png"
         [option]
@@ -258,8 +258,8 @@
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
 
 "+_"<b>Wounds list:</b>
-* <i>Paper cut</i> (-20% to all damage and -30% blade resistance) > All units
-* <i>Stepping on a Lego</i> (-20% mp and -15% accuracy) > All units"
+* <b><i>Paper cut</i></b> (-20% to all damage and -30% blade resistance) > All units
+* <b><i>Stepping on a Lego</i></b> (-20% mp and -15% accuracy) > All units"
         side_for=$side_number
         image="misc/nfw-icon.png"
         [option]
