Deactivation changes option

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -50,7 +50,7 @@
 * <b><i>Concussion</i></b> (-20% magical damage) > Units with magical attacks, random
 * <b><i>Wild magic</i></b> (magical attacks now are 50% chance) > Units with magical attacks, random
 * <b><i>Cowardice</i></b> (-15% accuracy) > Not mechanical, random
-* <b><i>Fear of weapon</i></b> (reduced 1 strikes and -20% accuracy against what wounded them) > Not mechanical, wounded with any weapon
+* <b><i>Fear of weapon</i></b> (-50% strikes and -20% accuracy against what wounded them) > Not mechanical, wounded with any weapon
 * <b><i>Fear of the dark/light</i></b> (reduced 1 strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground
 * <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains
 * <b><i>Fear of fog</i></b> (-40% mp when fog is active) > Not mechanical, wounded with fog active
@@ -346,6 +346,9 @@
         [/option]
         [option]
             label="<b><b>»</b> "+_"Stop Non-Fatal Wounds for this scenario"+"</b>"
+			[show_if]
+				{VARIABLE_CONDITIONAL nfw_disabled not_equals yes}
+			[/show_if]
             [command]
                 [message]
                     speaker=narrator
@@ -363,10 +366,25 @@
                             [fire_event]
                                 name=nfw_disable_for_this_scenario
                             [/fire_event]
+							[set_variable]
+								name=nfw_disabled
+								value=yes
+							[/set_variable]
                         [/command]
                     [/option]
                     {NFW_MENU_EXIT}
                 [/message]
+            [/command]
+        [/option]
+        [option]
+            label="<b><b>»</b> "+_"Non-Fatal Wounds is manually disabled for this scenario"+"</b>"
+			[show_if]
+				{VARIABLE_CONDITIONAL nfw_disabled equals yes}
+			[/show_if]
+            [command]
+				[fire_event]
+					name=nfw_help_menu
+				[/fire_event]
             [/command]
         [/option]
         [option]
