--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -39,6 +39,7 @@
     {CLEAR_VARIABLE nfw_no_dialog}
     {CLEAR_VARIABLE nfw_bridge_destroyed}
     {CLEAR_VARIABLE nfw_kill_stranded}
+    {CLEAR_VARIABLE nfw_disabled}
 [/event]
 
 [event]
