fear of weapon -50% strikes

--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -360,7 +360,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
                     mode=append
                     [attacks]
                         name="<span color='#DA0000'>"+_"weakness"+"</span>"
-                        description=_"-1 strikes and -20% accuracy when facing an enemy with $second_weapon.description|.
+                        description=_"-50% strikes and -20% accuracy when facing an enemy with $second_weapon.description|.
 Face your fears and defeat them to try to overcome them."
                         id=nfwme_scared_of_weapon
                         [filter_opponent]
@@ -368,7 +368,7 @@ Face your fears and defeat them to try to overcome them."
                                 name=$nfwme_rand_scary_weapon
                             [/has_attack]
                         [/filter_opponent]
-                        sub=1
+                        divide=2
                     [/attacks]
                     [chance_to_hit]
                         id=nfwme_scared_of_weapon_chance
